sreeshanth(translation   issue)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1371 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1937,6 +1937,7 @@ ar:
     flash42: "يرجى تعيين موظف آخر في اتباعها جدول زمني لإزالة هذه الجمعيات"
     flash43: "لا وجد أن الموظفين في هذا القسم"
     flash44: "لا يمكن حذف الموظف عندما dependecy موجودا. لتغيير استخدام الخيار السابق"
+    flash45 : "لا يمكن أن يكون تاريخ قسيمة الدفع المتولدة قبل ان ينضم الى التاريخ"
 
 #payroll translation
   payroll:
