--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1909,6 +1909,7 @@ hi:
     flash42: "समय सारिणी inorder में एक और कर्मचारी असाइन करने के लिए इस संघ को दूर करें"
     flash43: "कोई कर्मचारी इस विभाग में नहीं पाए जाते हैं"
     flash44: "कर्मचारी नहीं हटा जब dependecy मौजूद प्रयोग पूर्व विकल्प को बदलने कर सकते."
+    flash45: "Payslip तिथि कठबोली कार्यग्रहण तिथि से पहले उत्पन्न हो"
 
 #payroll translation
   payroll:
