--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1932,6 +1932,7 @@ es: # locale
     flash42: "Por favor asigne otro empleado en el horario con el objetivo de eliminar esta asociación"
     flash43: "Ninguno de los empleados en este departamento"
     flash44: "No se puede eliminar al empleado cuando existe cambio de uso dependecy a la opción anterior."
+    flash45: "Fecha de Nómina no puede ser generada antes de incorporarse a la fecha"
 
 #payroll translation
   payroll:
