sreeshanth(autosuggest menu  issue)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1372 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -2116,12 +2116,12 @@ ar:
     additional_fees: "رسوم إضافية"
     view_additional_fees: "عرض رسوم إضافية"
     create_additional_fees: "إنشاء رسوم إضافية"
-    fees_collection: "جمع الرسوم"
-    view_fees_collections: "عرض الرسوم مجموعات"
-    fees_submission_by_course: "رسوم التقديم من قبل الدورة"
-    fees_submission_for_each_student: "رسوم التقديم للحصول على كل طالب"
-    fees_structure: "هيكل الرسوم"
-    fees_defaulters: "رسوم المقصرون"
+    fee_collection : "جمع ​​الرسوم"
+    view_fee_collections : "مجموعات رسوم عرض"
+    fee_submission_by_course : "تقديم رسوم من قبل الدورة"
+    fee_submission_for_each_student : "تقديم الرسوم للحصول على كل الطلاب"
+    fee_structure : "هيكل الرسوم"
+    fee_defaulters : "المقصرون رسوم"
     finance_categories: "فئات التمويل"
     transactions: "المعاملات"
     add_expense: "إضافة المصاريف"
@@ -2164,4 +2164,11 @@ ar:
     attendance_report: "تقرير الحضور"
     view_students: "رأي الطلاب"
     student_advanced_search: "طالب بحث متقدم"
-    search_actions_and_events: "عمليات البحث ، والأحداث والأشخاص"
+    search_actions_and_events : "عمليات البحث، والأحداث والناس"
+    create_fees : "إنشاء الرسوم"
+    messages: "رسائل"
+    sent_messages : "الرسائل المرسلة"
+    create_messages : "إنشاء الرسائل"
+    change_password : "تغيير كلمة المرور"
+    employee_advanced_search : "بحث متقدم الموظف"
+    view_employees : "الموظفون عرض"
