--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2118,12 +2118,12 @@ en: # locale
    additional_fees: "Additional Fees"
    view_additional_fees: "View Additional Fees"
    create_additional_fees: "Create Additional Fees"
-   fees_collection: "Fees Collection"
-   view_fees_collections: "View Fees Collections"
-   fees_submission_by_course: "Fees Submission By Course"
-   fees_submission_for_each_student: "Fees Submission For Each Student"
-   fees_structure: "Fees Structure"
-   fees_defaulters: "Fees Defaulters"
+   fee_collection: "Fee Collection"
+   view_fee_collections: "View Fee Collections"
+   fee_submission_by_course: "Fee Submission By Course"
+   fee_submission_for_each_student: "Fee Submission For Each Student"
+   fee_structure: "Fee Structure"
+   fee_defaulters: "Fee Defaulters"
    finance_categories: "Finance Categories"
    transactions: "Transactions"
    add_expense: "Add Expense"
@@ -2166,6 +2166,13 @@ en: # locale
    attendance_report: "Attendance Report"
    view_students: "View Students"
    student_advanced_search: "Student Advanced Search"
-   search_actions_and_events: "Search Actions,Events and People"
-
+   search_actions_and_events: "Search Actions, Events and People"
+   create_fees: "Create Fees"
+   messages: "Messages"
+   sent_messages: "Sent Messages"
+   create_messages: "Create Messages"
+   change_password: "Change Password"
+   employee_advanced_search: "Employee Advance Search"
+   view_employees: "View Employees"
+   
 
