--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2114,12 +2114,12 @@ es: # locale
     additional_fees: "Cargos adicionales"
     view_additional_fees: "Ver tasas adicionales"
     create_additional_fees: "Crear tasas adicionales"
-    fees_collection: "Gastos de cobranza"
-    view_fees_collections: "Ver Colecciones Tarifas"
-    fees_submission_by_course: "Presentación de las tasas del curso"
-    fees_submission_for_each_student: "Honorarios de presentación para cada estudiante"
-    fees_structure: "Estructura de las tasas"
-    fees_defaulters: "Honorarios morosos"
+    fee_collection: "Cobro"
+    view_fee_collections: "Las colecciones Fee View"
+    fee_submission_by_course: "Presentación Cuota por curso"
+    fee_submission_for_each_student: "Envío de cuota por cada estudiante"
+    fee_structure: "Estructura de Cuotas"
+    fee_defaulters: "morosos Fee"
     finance_categories: "Categorías Finanzas"
     transactions: "Las transacciones"
     add_expense: "Añadir gastos"
@@ -2163,3 +2163,10 @@ es: # locale
     view_students: "Los estudiantes ven"
     student_advanced_search: "Estudiantes Búsqueda avanzada"
     search_actions_and_events: "Las acciones de búsqueda, eventos y personas"
+    create_fees: "Creación de cargos"
+    messages: "Mensajes"
+    sent_messages: "Mensajes enviados"
+    create_messages: "Creación de mensajes"
+    change_password: "Cambiar contraseña"
+    employee_advanced_search: "Busqueda Avanzada a los empleados"
+    view_employees: "Los empleados View"
