--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -2093,12 +2093,12 @@ hi:
     additional_fees: "अतिरिक्त शुल्क"
     view_additional_fees: "अतिरिक्त शुल्क देखें"
     create_additional_fees: "अतिरिक्त शुल्क बनाएँ"
-    fees_collection: "शुल्क संग्रह"
-    view_fees_collections: "शुल्क संग्रह देखें"
-    fees_submission_by_course: "कोर्स करके शुल्क प्रस्तुत"
-    fees_submission_for_each_student: "प्रत्येक छात्र के लिए प्रस्तुत शुल्क"
-    fees_structure: "शुल्क संरचना"
-    fees_defaulters: "शुल्क बकाएदारों"
+    fee_collection: "शुल्क संग्रह"
+    view_fee_collections: "देखें शुल्क संग्रह"
+    fee_submission_by_course: "कोर्स करके शुल्क प्रस्तुत"
+    fee_submission_for_each_student: "प्रत्येक छात्र के लिए शुल्क प्रस्तुत"
+    fee_structure: "शुल्क संरचना"
+    fee_defaulters: "शुल्क बकाएदारों"
     finance_categories: "वित्त श्रेणियाँ"
     transactions: "लेन - देन"
     add_expense: "व्यय जोड़ें"
@@ -2142,3 +2142,10 @@ hi:
     view_students: "देखें छात्र"
     student_advanced_search: "छात्र उन्नत खोज"
     search_actions_and_events: "खोज क्रियाएँ, घटनाक्रम और लोग"
+    create_fees: "शुल्क बनाएँ"
+    messages: "संदेश"
+    sent_messages: "भेजे गए संदेश"
+    create_messages: "संदेश बनाएँ"
+    change_password: "पासवर्ड बदलें"
+    employee_advanced_search: "कर्मचारी उन्नत खोज"
+    view_employees: "देखें कर्मचारी"
