Fixed flash notice for employee delete
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1518 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1936,6 +1936,7 @@ ar:
     flash43: "لا وجد أن الموظفين في هذا القسم"
     flash44: "لا يمكن حذف الموظف عندما dependecy موجودا. لتغيير استخدام الخيار السابق"
     flash45 : "لا يمكن أن يكون تاريخ قسيمة الدفع المتولدة قبل ان ينضم الى التاريخ"
+    flash46: "الموظف حذف بنجاح."
 
 #payroll translation
   payroll:
