--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1908,6 +1908,7 @@ hi:
     flash43: "कोई कर्मचारी इस विभाग में नहीं पाए जाते हैं"
     flash44: "कर्मचारी नहीं हटा जब dependecy मौजूद प्रयोग पूर्व विकल्प को बदलने कर सकते."
     flash45: "Payslip तिथि कठबोली कार्यग्रहण तिथि से पहले उत्पन्न हो"
+    flash46: "कर्मचारी सफलतापूर्वक नष्ट कर दिया है|"
 
 #payroll translation
   payroll:
