--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -701,7 +701,7 @@ en: # locale
   exam_schedule_published_no_sms: "Exam schedule published, No sms was sent as Sms setting was not activated"
   exam_result_published_no_sms: "Exam result published, No sms was sent as Sms setting was not activated"
   exam_schedule_published: "Exam schedule published"
-  result_has_been_published: "result has been published"
+  result_has_been_published: "Result has been published"
   view_reports: "Please view reports for your result"
   exam_scheduling_not_done: "Exam scheduling not done yet."
   select_a_batch_to_continue: "Select a batch to continue"
@@ -929,7 +929,7 @@ en: # locale
   line_1: "Line 1"
   line_2: "Line 2"
   employee_management_text: "Employee Management"
-  histroy: "History"
+  history: "History"
   all_employee: "All Employees"
   student_leaving_school: "Student leaving school"
   search_by_name: "Search by name"
@@ -1777,8 +1777,8 @@ en: # locale
   must_be_a_valid_email_address: "must be a valid email address"
   must_contain_only_letters: "must contain only letters, numbers, hyphen, and  underscores"
   partial: "partial"
-  student_category_updated_succesfully: "Student category updated succesfully"
-  student_category_deleted_succesfully: "Student category deleted succesfully"
+  student_category_updated_succesfully: "Student category updated successfully"
+  student_category_deleted_succesfully: "Student category deleted successfully"
   years: "Years"
   months: "Months"
   following_pblm_occured_while_saving_the_batch: "Following problems occured while saving this batch"
