--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -396,6 +396,8 @@ en: # locale
   add: "Add"
   none: "None"
   submit: "Submit"
+  remark: "Remark"
+  employee_payslip_accept: "Employee Payslip Accept"
   manage: "Manage"
   admission: "Admission"
   type: "Type"
