News Comment Moderation added
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2581 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1790,6 +1790,7 @@ ar:
   group_create_privilege: "المجموعة إنشاء"
   transport_admin_privilege: "مسؤول النقل"
   task_management_privilege: "مهمة إدارة"
+  waiting_to_approve: "في انتظار الموافقة على"
 
   flash_msg1: "تحديث إضافية المجموعة الامتحان بنجاح."
   flash_msg2: "آسف"
