sms module configuration removed, success code introduced, file not found message introduced
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2714 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1192,6 +1192,8 @@ ar:
   employees: "الموظفين"
   settings: "إعدادات"
   sms_sent: "أرسل SMS بنجاح للطلاب وأولياء أمورهم مختارة"
+  sms_sending_failed_with_response: "فشل إرسال الرسائل القصيرة مع استجابة"
+  sms_configuration_not_found: "SMS ملف التكوين غير موجود."
   sms_sent_selected_course: "&#39;أرسل SMS بنجاح للطلاب (الأوصياء) بالطبع مختارة"
   sms_sent_to_employee: "أرسل SMS بنجاح لاختيار الموظفين"
   sent_to_selected_department: "أرسل SMS بنجاح لموظفي دائرة مختارة"
