--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1166,6 +1166,8 @@ hi:
   employees: "कर्मचारियों"
   settings: "सेटिंग्स"
   sms_sent: "एसएमएस चयनित छात्रों और उनके अभिभावकों के लिए सफलतापूर्वक भेजा"
+  sms_sending_failed_with_response: "एसएमएस भेजने प्रतिक्रिया के साथ विफल"
+  sms_configuration_not_found: "एसएमएस विन्यास फाइल नहीं मिला."
   sms_sent_selected_course: "&#39;एसएमएस चयनित पाठ्यक्रम के छात्रों (संरक्षक) को सफलतापूर्वक भेजा"
   sms_sent_to_employee: "एसएमएस चयनित कर्मचारियों को सफलतापूर्वक भेजा"
   sent_to_selected_department: "एसएमएस चयनित विभाग के कर्मचारियों को सफलतापूर्वक भेजा"
