reminder messages UI changed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2852 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -893,6 +893,9 @@ en: # locale
   enter_subject: "Please enter message and subject."
   back_to_inbox: "Back to inbox"
   mark_as_unread: "Mark as unread"
+  mark_as_read: "Mark as read"
+  select_an_action: "Select an action"
+  delete: "Delete"
   reminder_to_staff: "Create reminder to staff"
   reminder_to_student: "Create reminder to student"
   select_more_course: "Select more course"
