dashboard UI updated, error page styles changed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2862 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -271,6 +271,7 @@ ar:
       day: "%a"
       mont: "%d"
       day_mon: "%a %d"
+      date_month: "%B %e"
 
 
     day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
