--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -242,6 +242,7 @@ hi:
       day: "%a"
       mont: "%d"
       day_mon: "%a %d"
+      date_month: "%B %e"
 
 
     day_names: [रविवार, सोमवार, मंगलवार, बुधवार, गुरुवार, शुक्रवार, शनिवार]
