--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -270,6 +270,7 @@ de: # locale
       day: "%a"
       mont: "%d"
       day_mon: "%a %d"
+      date_month: "%B %e"
        
 
     day_names: [Sonntag, Montag, Dienstag, Mittwoch, Donnerstag, Freitag, Samstag]
