bug fix => [500 in forgot password when email if email not given]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2879 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -2044,6 +2044,7 @@ ar:
     flash17: "إنشاء حساب مستخدم!"
     flash18: "تم إعادة تعيين كلمة المرور الارتباط إرسالها إلى البريد الإلكتروني الخاص بك"
     flash19: "أي مستخدم موجود مع اسم المستخدم"
+    flash20: "المستخدم ليس لديه هوية البريد الالكتروني!"
 
 #student controller translation
   student:
