--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -2017,6 +2017,7 @@ hi:
     flash17: "उपयोगकर्ता खाते बनाया!"
     flash18: "रीसेट पासवर्ड ईमेल लिंक"
     flash19: "कोई ईमेल पते के साथ उपयोगकर्ता मौजूद"
+    flash20: "उपयोगकर्ता एक ईमेल आईडी नहीं है!"
     
 #student controller translation
   student:
