adding missing translations for date
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2939 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/mr.yml
+++ b/config/locales/mr.yml
@@ -270,6 +270,7 @@ mr: # locale
       day: "%a"
       mont: "%d"
       day_mon: "%a %d"
+      date_month: "%B %e"
        
 
     day_names: [रविवार, सोमवार, मंगळवार, बुधवार, गुरुवार, शुक्रवार, शनिवार]
