restricted the admission of employee number as admin
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3154 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1848,6 +1848,7 @@ ar:
   basestart_date_is_invalid: "تاريخ البدء غير صالح"
   baseend_date_is_invalid: "تاريخ النهاية غير صالح"
   remove_entry_confirm: "إزالة دخول؟"
+  should_not_be_admin: "لا ينبغي أن المسؤول"
 
   flash_msg1: "تحديث إضافية المجموعة الامتحان بنجاح."
   flash_msg2: "آسف"
