--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1857,6 +1857,7 @@ en: # locale
   basestart_date_is_invalid: "Start date is invalid"
   baseend_date_is_invalid: "End date is invalid"
   remove_entry_confirm: "Remove entry?"
+  should_not_be_admin: "Should Not Be Admin"
 
   flash_msg1: "Updated additional exam group successfully."
   flash_msg2: "Sorry"
