restricted the admission of employee number as admin
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3155 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1850,7 +1850,7 @@ ja: # locale
   basestart_date_is_invalid: "Start date is invalid"
   baseend_date_is_invalid: "End date is invalid"
   remove_entry_confirm: "Remove entry?"
-  should_not_be_admin： "管理者であるべきではない"
+  should_not_be_admin: "Should Not Be Admin"
 
   flash_msg1: "追加試験グループのアップデートは成功しました。"
   flash_msg2: "申し訳ありません。"
