change the word monthly report to display report in finance monthly report
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3220 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1668,7 +1668,7 @@ en: # locale
   submitting_fees_by_search: "Submitting fees by searching each students"
   students_fee_dues: "Students with fee dues"
   create_income: "Create Income"
-  monthly_report: "Monthly Report"
+  monthly_report: "Dispaly Report"
   compare_with: "Compare With"
   view_monthly_payslips: "View Monthly Payslips"
   view_payslip: "View Payslip"
